# desktop-automation

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pt-br.md
.fingerprint/adler2-e93da42df159bd30/: lib-adler2  lib-adler2.json
.fingerprint/aligned-f5c0084c900f55e6/: lib-aligned  lib-aligned.json
.fingerprint/aligned-vec-0e6b79b8f7996b1b/: lib-aligned_vec  lib-aligned_vec.json
.fingerprint/anyhow-57c968aeca849e55/: lib-anyhow  lib-anyhow.json
.fingerprint/anyhow-839957b05429e254/: build-script-build-script-build  build-script-build-script-build.json
.fingerprint/anyhow-ffe5f0a7eae2d885/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/arg_enum_proc_macro-18f354edb7601e51/: lib-arg_enum_proc_macro  lib-arg_enum_proc_macro.json
.fingerprint/arrayvec-9e579cc535cd84ae/: lib-arrayvec  lib-arrayvec.json
.fingerprint/as-slice-65799c2e367c673f/: lib-as_slice  lib-as_slice.json
.fingerprint/async-trait-a08908d8f6d36de8/: lib-async_trait  lib-async_trait.json
.fingerprint/autocfg-7245dc323b8e036f/: lib-autocfg  lib-autocfg.json
.fingerprint/av-scenechange-76466d8caae5f29d/: build-script-build-script-build  build-script-build-script-build.json
.fingerprint/av-scenechange-7843ff1b3b46c1b3/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/av-scenechange-f120c2fa8a3d8b42/: lib-av_scenechange  lib-av_scenechange.json
.fingerprint/av1-grain-ee91039f222b6ec9/: lib-av1_grain  lib-av1_grain.json
src/: com_thread.rs  main.rs  server.rs
(+394 files in other folders)
